--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -53,7 +53,7 @@
       <div class="container row py-2">
         <div class="col-md-6">
          <h1>Welcome</h1>
-          <a href="http://lakhoune.com" class="mr-1">http://lakhoune.com</a> is
+          <a href="http://conrardy.info" class="mr-1">http://conrardy.info</a> is
           owned by Ben Lakhoune
           <br />
         </div>
