--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -60,7 +60,7 @@
         <div class="col-md-6 contacts">
           <h5>Social</h5>
 
-          <a href="https://github.com/lakhoune" target="_blank" class="contact"
+          <a href="https://github.com/aran30" target="_blank" class="contact"
             ><img
               src="assets/GitHub-Mark-Light-32px.png"
               height="20"
