--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,24 +1,26 @@
 <mat-card class="shadow">
   <mat-card-header>
     <div mat-card-avatar class="header-image"></div>
-    <mat-card-title>Aaron D. Conrardy</mat-card-title>
+    <mat-card-title>Ben Lakhoune</mat-card-title>
     <mat-card-subtitle>Master's Student</mat-card-subtitle>
   </mat-card-header>
 
   <mat-card-content class="my-2">
     <p dir="auto">
-      Hey! Glad, you made it. I'm Aaron and I am passionate. I am currently enrolled in a Master's degree at
+      Hey! Glad, you made it. I'm Ben and I am passionate about Open Source
+      Software. I am currently enrolled in a Master's degree at
       <a href="https://www.rwth-aachen.de/" target="_blank" rel="nofollow"
         >RWTH Aachen</a
       >.
     </p>
     <ul dir="auto">
-      <li>😄 <strong>Pronouns</strong>: Idc</li>
-      <li>🌱 <strong>I'm currently learning</strong>: Angular and italian</li>
+      <li>😄 <strong>Pronouns</strong>: He/Him</li>
+      <li>🌱 <strong>I'm currently learning</strong>: jsPlumb</li>
       <li>
-        🧠 <strong>Favorite quote</strong>: "Hey, you. You're finally awake." (Ralof)
+        🧠 <strong>Favorite quote</strong>: "There are only two hard things in
+        Computer Science: cache invalidation and naming things" (Phil Karlton)
       </li>
-      <li>⚡️ <strong>Favorite tech stack</strong>: Microsoft Office</li>
+      <li>⚡️ <strong>Favorite tech stack</strong>: M.E.A.N.</li>
     </ul>
   </mat-card-content>
 </mat-card>
