--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -53,14 +53,14 @@
       <div class="container row py-2">
         <div class="col-md-6">
          <h1>Welcome</h1>
-          <a href="http://conrardy.info" class="mr-1">http://conrardy.info</a> is
+          <a href="http://lakhoune.com" class="mr-1">http://lakhoune.com</a> is
           owned by Ben Lakhoune
           <br />
         </div>
         <div class="col-md-6 contacts">
           <h5>Social</h5>
 
-          <a href="https://github.com/aran30" target="_blank" class="contact"
+          <a href="https://github.com/lakhoune" target="_blank" class="contact"
             ><img
               src="assets/GitHub-Mark-Light-32px.png"
               height="20"
