--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -3,14 +3,25 @@
 
   <mat-card-content class="my-2">
     <p>
-      Currently writing my master's thesis at
+      Currently working as a research assistant at
       <a
         href="https://github.com/rwth-acis"
         target="_blank"
         rel="noopener noreferrer"
         >@rwth-acis</a
       >
-
+      working on
+      <a href="http://las2peer.org" target="_blank" rel="noopener noreferrer"
+        >las2peer</a
+      >
+      for the
+      <a href="https://tech4comp.de" target="_blank" rel="noopener noreferrer"
+        >tech4comp</a
+      >
+      project, as well as Web master for the
+      <a href="https://avl.lu" target="_blank" rel="noopener noreferrer"
+        >AVL academic circle</a
+      >
     </p>
   </mat-card-content>
 </mat-card>
