--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,7 +1,7 @@
 <mat-card class="shadow">
   <mat-card-header>
     <div mat-card-avatar class="header-image"></div>
-    <mat-card-title>Ben Lakhoune</mat-card-title>
+    <mat-card-title>Aaron D. Conrardy</mat-card-title>
     <mat-card-subtitle>Master's Student</mat-card-subtitle>
   </mat-card-header>
 
