--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,7 +33,7 @@
         >
           <span class="material-icons">menu</span>
         </button>
-        <a routerLink="/" id="website-header">Lakhoune</a>
+        <a routerLink="/" id="website-header">Conrardy</a>
         <span class="example-spacer"></span>
 
         <button
@@ -53,14 +53,14 @@
       <div class="container row py-2">
         <div class="col-md-6">
          <h1>Welcome</h1>
-          <a href="http://lakhoune.com" class="mr-1">http://lakhoune.com</a> is
-          owned by Ben Lakhoune
+          <a href="http://conrardy.info" class="mr-1">http://conrardy.info</a> is
+          owned by Aaron D. Conrardy
           <br />
         </div>
         <div class="col-md-6 contacts">
           <h5>Social</h5>
 
-          <a href="https://github.com/lakhoune" target="_blank" class="contact"
+          <a href="https://github.com/aran30" target="_blank" class="contact"
             ><img
               src="assets/GitHub-Mark-Light-32px.png"
               height="20"
@@ -71,13 +71,13 @@
           >
 
           <a
-            href="mailto: a.b.lakhoune@gmail.com"
+            href="mailto: conrardy.aaron30@gmail.com"
             class="contact"
             style="text-decoration: none"
           >
             <span class="material-icons"> email </span>
             <span style="text-decoration: underline"
-              >a.b.lakhoune@gmail.com</span
+              >conrardy.aaron30@gmail.com</span
             >
           </a>
         </div>
