--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -1,5 +1,5 @@
 .header-image {
-  background-image: url("https://avatars.githubusercontent.com/u/38857665?v=4");
+  background-image: url("https://avatars.githubusercontent.com/u/50965489?s=400&u=2b985114ef80dbb54b1e6e37cab7a2175ba53724&v=4");
   background-size: cover;
   width: 70px;
   height: 70px;
