--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -10,7 +10,9 @@
       Hey! Glad, you made it. I'm Aaron and I am passionate. I am currently enrolled in a Master's degree at
       <a href="https://www.rwth-aachen.de/" target="_blank" rel="nofollow"
         >RWTH Aachen</a
-      >.
+      >. I thank my good friend <a href="https://github.com/lakhoune" target="_blank" rel="nofollow"
+      >Ben</a
+    > for creating this page for me!
     </p>
     <ul dir="auto">
       <li>😄 <strong>Pronouns</strong>: Idc</li>
