--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -15,8 +15,7 @@
     > for creating this page for me!
     </p>
     <ul dir="auto">
-      <li>😄 <strong>Pronouns</strong>: Idc</li>
-      <li>🌱 <strong>I'm currently learning</strong>: Angular and italian</li>
+      <li>🌱 <strong>I'm currently learning</strong>: React and italian</li>
       <li>
         🧠 <strong>Favorite quote</strong>: "Hey, you. You're finally awake." (Ralof)
       </li>
